issue #17: 1. aligned logo in clients; 2. smaller logo in nav

--- a/css/agency.css
+++ b/css/agency.css
@@ -222,23 +222,23 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-brand>img {
-    height: 50px;
-    max-width: 250px;
+    height: 40px;
+    max-width: 200px;
     margin: -15px;
 }
 
 @media(min-width:768px) {
     .navbar-brand>img {
-        height: 50px;
-        max-width: 300px;
+        height: 40px;
+        max-width: 240px;
         margin: -15px;
     }
 }
 
 @media(min-width:992px) {
     .navbar-brand>img {
-        height: 50px;
-        max-width: 400px;
+        height: 40px;
+        max-width: 320px;
         margin: -15px;
     }
 }
